# Hermes

./: .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  Hermes.Mobile.sln  Hermes.sln  LICENSE  NuGet.config  PERFORMANCE-REVIEW-1.md  PLATFORM-DIFFERENCES.md  README.md  ROADMAP.md  SECURITY.md  SPA-ARCHITECTURE.md  benchmark-results.json  test.sh
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: integration-test.yml  nuget-publish.yml  smoke-test.yml
THIRD_PARTY_LICENSES/: Photino-Apache-2.0.txt
benchmarks/Hermes.Benchmarks/: Hermes.Benchmarks.csproj  MessagePumpBenchmarks.cs  Program.cs  SyncContextBenchmarks.cs
benchmarks/Hermes.Benchmarks.Harness/: Hermes.Benchmarks.Harness.csproj  Program.cs  benchmark-results.json
docs/Architecture/: ANDROID-ARCHITECTURE.md  IOS-ARCHITECTURE.md
docs/plans/: NativeLinuxLib.md  SpaAlternatives.md
samples/BlazorHelloWorld/: BlazorHelloWorld.csproj  Program.cs  _Imports.razor
samples/HelloWorld/: HelloWorld.csproj  Program.cs
samples/IntegrationTestApp/: IntegrationTestApp.csproj  Program.cs  _Imports.razor
samples/PokedexTray/: LookupWindow.cs  PokedexTray.csproj  PokemonInfo.cs  PokemonService.cs  Program.cs
samples/ReactHelloWorld/: Program.cs  ReactHelloWorld.csproj
samples/SvelteHelloWorld/: Program.cs
samples/WebHelloWorld/: Program.cs
src/: Directory.Build.props
src/Hermes.Blazor/: AutostartExtensions.cs  Hermes.Blazor.csproj  Hermes.Blazor.targets  HermesBlazorApp.cs  HermesBlazorAppBuilder.cs  HermesWebViewManager.cs  KeyValueStoreExtensions.cs  SingleInstanceExtensions.cs  StaticWebAssetsFileProvider.cs  _Imports.razor
src/Hermes.Contracts/: Hermes.Contracts.csproj
src/Hermes.Mobile.Android/: Hermes.Mobile.Android.csproj  HermesMobileAndroidHost.cs  (+1 more)
src/Hermes.Native.Linux/: CMakeLists.txt  Exports.c  Exports.h  HermesContextMenu.c  HermesDialogs.c  HermesMenu.c  HermesMenu.h  HermesStatusIcon.c  HermesStatusIcon.h  HermesTypes.h  HermesWindow.c  HermesWindow.h  build.sh
(+283 files in other folders)
